fixes issue with mis-aligned facet count value

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -681,7 +681,7 @@ h3 {
   }
 
   & .facet-count {
-    width: 2.5em;
+    width: 3.5em;
   }
 
   & .remove .glyphicon {
